[package]
name = "fedimintd-custom"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimintd with custom module set"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = "1.0.66"
fedimintd = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
nostrmint-common = { path = "../modules/nostrmint-common" }
nostrmint-server = { path = "../modules/nostrmint-server" }
schnorr_fun = { version = "0.9.1", features = ["serde", "bincode"] }
sha2 = "0.10"
